fixed responsive issues, fixed border spacing

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 #footer {
-    height: 100px;
+    height: 50px;
     position: relative;
 
            
