--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,7 @@
 #section1 {
+  width: 100%;
     height: 450px;
-    background-size: cover;
+    background-size: 100% 100%;;
     position: relative;
     
     
@@ -10,7 +11,8 @@
     #section1 {
         background-image: url("https://i.imgrz.com/M27x.jpg");
         background-repeat: no-repeat;
-      background-size: cover ;
+      background-size: 100% 100%; ;
+      
       
     }
   }
@@ -18,7 +20,7 @@
     #section1 {
       background-image: url("https://i.imgrz.com/M27x.jpg");
       background-repeat: no-repeat;
-      background-size: cover ;
+      background-size: 100% 100%; ;
     }
   }
 
