--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,37 +1,12 @@
-.img-wrapper {
-  height: 250px ;
-  
-
-}
-
-.margin_20 {
-  margin: 60px;
-  text-align: center;
-}
-
-.margin_50 {
-  margin: 50px;
-
-}
-
-
-
-.btn {
-  width: 10%;
-
-}
-
-.btn_row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
+.padding_10 {
+padding: 10px;
 }
 
 #section2 {
   padding-bottom: 50px;
+}
+
+.section_wrapper {
+  width: 100%;
+  position: relative;
 }
